- Add capability to "Add to homescreen” on iOS and Android. This “installs” BearStatus as an “app” with no browser UI 	- known issue: switching between pages in “app mode” on iPhone jumps to Safari - Set up google web fonts for logo. Using Open Sans as font for now

--- a/view/stylesheets/admin.css
+++ b/view/stylesheets/admin.css
@@ -10,3 +10,7 @@ body {
 #center {
   text-align: center;
 }
+
+#logo {
+  font-family: "Open Sans", sans-serif;
+}
