--- a/view/stylesheets/schedule.css
+++ b/view/stylesheets/schedule.css
@@ -5,3 +5,7 @@ body {
 #center {
   text-align: center;
 }
+
+#logo {
+  font-family: "Open Sans", sans-serif;
+}
